syntax = "proto3";

package report;

service ReportService{
    rpc CreateReport (CreateReportDto) returns (Report) {}
    rpc FindReportsByMarket (FindReportsByMarketDto) returns (ReportsList) {}
}

message FindReportsByMarketDto{
    string id = 1;
    int32 page = 2;
    int32 limit = 3;
}

message ReportsList{
    repeated Report reports = 1;
}

message CreateReportDto{
    User user = 1;
    Market market = 2;
    Product product = 3;
}

message Report{
    string id = 1;
    Status status = 2;
    string dateAttended = 4;
    User user = 5;
    Market market = 6;
    Product  product = 7;
}

enum Status{
    ATTENDED = 0;
    UNATTENDED = 1;
}

message User{
    string id = 1;
    string name = 2;
    string lastname = 3;
    string email = 4;
}

message Market{
    string id = 1;
    string name =2;
    string urlImg=3;
}

message Product{
    string id = 1;
    string brand = 2;
    string name = 3;
    string urlImg = 4;
}